# SDRPlusPlusBrown

./: .gitignore  CMakeLists.txt  changelog.md  make_macos_bundle.sh  make_stable.sh  make_windows_package.ps1  readme.md  sdrpp.desktop  sdrpp_module.cmake  tcpdump.awk
.github/workflows/: build_all.yml
android/: build.gradle  gradle.properties
android/app/: build.gradle
core/: CMakeLists.txt
core/backends/android/: android_backend.h  backend.cpp
core/backends/glfw/: backend.cpp
core/ft8_etc/: LICENSE.txt  gen_ft8.h  mscore.cpp  mscore.h  unpack_msg.cpp
core/libcorrect/: CMakeLists.txt  patch_android_newer_cmake.sh
core/libcorrect/util/: CMakeLists.txt
core/src/: backend.h  command_args.cpp  command_args.h  config.cpp  core.cpp  core.h  ctm.h  module.cpp  module.h  module_com.cpp  module_com.h  sdrpp_export.h  server.cpp  server.h  server_protocol.h  version.h
core/src/dsp/: block.h  chain.h  operator.h  processor.h  sink.h  stream.h  types.h
core/src/gui/: colormaps.cpp  file_dialogs.h  gui.cpp  gui.h  main_window.cpp  main_window.h  mobile_main_window.cpp  mobile_main_window.h  smgui.cpp  smgui.h  style.cpp  style.h  theme_manager.cpp  theme_manager.h  tuner.cpp  tuner.h
core/src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
core/src/implot/: implot.cpp
core/src/signal_path/: iq_frontend.cpp  iq_frontend.h  signal_path.cpp  signal_path.h  sink.cpp  sink.h  source.cpp  source.h  trx.h  vfo_manager.cpp
core/src/utils/: arrays.cpp  arrays.h  cty.cpp  cty.h  event.h  flog.cpp  flog.h  freq_formatting.h  hrfreq.cpp  kmeans.h  mpeg.cpp  mpeg.h  net.cpp  net.h  networking.cpp  networking.h  pbkdf2_sha256.h  stream_tracker.h  strings.h  usleep.h  wav.h  wstr.h
decoder_modules/ch_dmr_decoder/: CMakeLists.txt  README.md
decoder_modules/ch_dmr_decoder/src/: demod.h  main.cpp  radio_module.h
decoder_modules/ch_dmr_decoder/src/demodulators/: dsd.h
decoder_modules/ch_dmr_decoder/src/dsp/: dsd_demod.cpp  dsd_dstar.cpp  dsd_nxdn.cpp
decoder_modules/ch_extravhf_decoder/: CMakeLists.txt
decoder_modules/ch_extravhf_decoder/src/: demod.h  main.cpp
decoder_modules/ch_extravhf_decoder/src/demodulators/: dsd.h
decoder_modules/ch_extravhf_decoder/src/dsp/: dsd.h  dsd_demod.cpp  dsd_dstar.cpp  dsd_p25.cpp  dsd_p25_utils.h  dsd_provoice.cpp
decoder_modules/dsdcc_decoder/: CMakeLists.txt
decoder_modules/dsdcc_decoder/src/: dsdcc_decoder.h  main.cpp
decoder_modules/ft8_decoder/: CMakeLists.txt  android_pack.sh
decoder_modules/ft8_decoder/src/: fftw_mshv_plug.cpp  fftw_mshv_plug.h  fftw_mshv_plug_original.h  ft8_decoder.h  main.cpp  module_interface.h  sdrpp_ft8_mshv.cpp  sdrpp_ft8_mshv_main.cpp  symbolic.cpp  symbolic.h
decoder_modules/ft8_decoder/src/ft8_etc/: bpdecode_ft8_174_91.h  config_rpt_msk40.h  config_str_exc.h  decoderfsk441.cpp  decoderft4.cpp  decoderft8.cpp  decoderjtms.cpp  decoderms.cpp  decoderms.h  decodermsk144.cpp  decodermsk40.cpp  decoderpom.cpp  decoderpom.h  decoderq65.cpp  decoderq65.h  ft_all_ap_def.h  gen_ft4.h  gen_ft8.cpp  gen_ft8.h  genmesage_msk.cpp  genpom.cpp  mscore.cpp  mscore.h  mshv_support.cpp  mshv_support.h  nhash.h  pack_unpack_msg77.cpp  pack_unpack_msg77.h  pfx_sfx.cpp  pfx_sfx.h  q65_subs.cpp  wasm_defines.h
decoder_modules/ft8_decoder/src/ft8_etc/boost/: aix.hpp  config.hpp  cstdint.hpp  dinkumware.hpp  hpux.hpp  integer_traits.hpp  libcomo.hpp  limits.hpp  linux.hpp  msl.hpp  qnxnto.hpp  select_compiler_config.hpp  select_platform_config.hpp  static_assert.hpp
decoder_modules/kg_sstv_decoder/src/: main.cpp
decoder_modules/m17_decoder/: CMakeLists.txt
decoder_modules/m17_decoder/src/: lsf_decode.cpp  main.cpp
decoder_modules/meteor_demodulator/src/: main.cpp
decoder_modules/pager_decoder/src/: main.cpp
decoder_modules/radio/src/: demod.h  (+4 more)
docker_builds/debian_bookworm/: do_build.sh
docker_builds/debian_bullseye/: do_build.sh
docker_builds/debian_buster/: do_build.sh
docker_builds/debian_sid/: do_build.sh
docker_builds/ubuntu_bionic/: do_build.sh
docker_builds/ubuntu_jammy/: do_build.sh
docker_builds/ubuntu_oracular/: do_build.sh
docs/: CNAME  index.html  index.md  tx.md
go/: go.mod
go/service/: main.go
go/service_client/: service_client.go
macos/: Info.plist  bundle_utils.sh
misc_modules/frequency_manager/: CMakeLists.txt
misc_modules/noise_reduction_logmmse/: CMakeLists.txt
misc_modules/noise_reduction_logmmse/src/: README.txt  af_nr.h  arrays.h  bgnoise.cpp  bgnoise.h  if_nr.h  logmmse.h  logmmse_math.h  logmmse_nr.h  main.cpp  omlsa_mcra.cpp  omlsa_mcra.h
misc_modules/noise_reduction_logmmse/src/omlsa_mcra/: Datablock_Read.cpp  Datablock_Read.h  G_calculate.cpp  G_calculate.h  Gvalue2.pcm.xz  LSA_denoise.cpp  SearchChart.h  base4_fft.cpp  base4_fft.h  head.h  main.cpp
misc_modules/recorder/: CMakeLists.txt
misc_modules/reports_monitor/: CMakeLists.txt
misc_modules/tci_server/: CMakeLists.txt
misc_modules/tci_server/src/: main.cpp  websocket.h
misc_modules/websdr_view/: CMakeLists.txt
related/hl2_proxy/: go.mod
sink_modules/brown_audio_sink/: CMakeLists.txt
sink_modules/brown_audio_sink/src/: main.cpp
sink_modules/linux_pulseaudio_sink/: CMakeLists.txt
sink_modules/linux_pulseaudio_sink/src/: main.cpp
sink_modules/macos_coreaudio_sink/: CMakeLists.txt
sink_modules/mpeg_adts_sink/: CMakeLists.txt
sink_modules/mpeg_adts_sink/src/: main.cpp
source_modules/airspy_source/: CMakeLists.txt
source_modules/airspyhf_source/: CMakeLists.txt
source_modules/hackrf_source/: CMakeLists.txt
source_modules/hl2_source/: CMakeLists.txt
source_modules/hl2_source/src/: bandconfig.cpp  bandconfig.h  discovered.h  hl2_device.cpp  hl2_device.h  main.cpp  plugin_main.h  protocol1_discovery.cpp  protocol1_discovery.h
source_modules/kiwisdr_source/: CMakeLists.txt
source_modules/limesdr_source/: CMakeLists.txt
source_modules/plutosdr_source/: CMakeLists.txt
source_modules/rtl_sdr_source/: CMakeLists.txt
src/: macos_init.m  main.cpp  test0.cpp
tests/: signal_detection_test.cpp  test_utils.cpp  test_utils.h
(+199 files in other folders)
